# fsm-prototype

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  cmake-build.yml  static_checks.yml
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
